--- a/backend/data/tasks.json
+++ b/backend/data/tasks.json
@@ -10167,5 +10167,205 @@
       "timestamp": "2026-02-06T02:16:32.070Z",
       "executionTimeMs": 463
     }
+  },
+  "53bbb415-8973-4506-97eb-1834eb41a63e": {
+    "id": "53bbb415-8973-4506-97eb-1834eb41a63e",
+    "prompt": "What happened in crypto news today?",
+    "userId": "demo-user",
+    "status": "completed",
+    "specialist": "general",
+    "createdAt": "2026-02-06T02:25:46.265Z",
+    "updatedAt": "2026-02-06T02:25:48.759Z",
+    "payments": [],
+    "messages": [
+      {
+        "id": "msg-1770344746882-lvgk",
+        "from": "dispatcher",
+        "to": "general",
+        "content": "Routing task: \"What happened in crypto news today?...\"",
+        "timestamp": "2026-02-06T02:25:46.882Z"
+      },
+      {
+        "id": "msg-1770344746884-djyy",
+        "from": "dispatcher",
+        "to": "general",
+        "content": "Processing with general... (fee: 0 USDC)",
+        "timestamp": "2026-02-06T02:25:46.884Z"
+      },
+      {
+        "id": "msg-1770344748759-py63",
+        "from": "general",
+        "to": "dispatcher",
+        "content": "I'm not sure how to help with that. Try asking about wallet balances, market analysis, or social sentiment.",
+        "timestamp": "2026-02-06T02:25:48.759Z"
+      }
+    ],
+    "metadata": {
+      "hiredAgents": [
+        "bankr",
+        "scribe",
+        "seeker"
+      ],
+      "wasApproved": false
+    },
+    "result": {
+      "success": true,
+      "data": {
+        "magos": {
+          "insight": "📊 **Meme coin analysis:** Based on recent social activity, top mentions are $BONK, $WIF, and $POPCAT. $BONK showing strongest momentum with cross-platform mentions. Consider small position with stop-loss.",
+          "confidence": 0.65,
+          "trending": [
+            {
+              "token": "BONK",
+              "mentions": 42,
+              "sentiment": "bullish"
+            },
+            {
+              "token": "WIF",
+              "mentions": 28,
+              "sentiment": "bullish"
+            },
+            {
+              "token": "POPCAT",
+              "mentions": 15,
+              "sentiment": "neutral"
+            }
+          ],
+          "relatedTokens": [
+            "BONK",
+            "WIF",
+            "POPCAT"
+          ]
+        },
+        "aura": {
+          "market": "crypto",
+          "mood": "fearful",
+          "topMentions": [
+            "SOL",
+            "BTC",
+            "memecoins",
+            "DeFi"
+          ],
+          "summary": "Current market vibes: fearful. Social volume is above average. Potential opportunities - fear creates discounts.",
+          "confidence": 0.68
+        },
+        "combined": "I'm not sure how to help with that. Try asking about wallet balances, market analysis, or social sentiment."
+      },
+      "confidence": 0.665,
+      "timestamp": "2026-02-06T02:25:48.759Z",
+      "executionTimeMs": 1074
+    }
+  },
+  "a4fefa1b-cffb-4b31-b7a6-d5e85109faeb": {
+    "id": "a4fefa1b-cffb-4b31-b7a6-d5e85109faeb",
+    "prompt": "what happened in crypto news today?",
+    "userId": "demo-user",
+    "status": "completed",
+    "specialist": "seeker",
+    "createdAt": "2026-02-06T02:27:38.107Z",
+    "updatedAt": "2026-02-06T02:27:41.310Z",
+    "payments": [
+      {
+        "amount": "0.0001",
+        "currency": "USDC",
+        "network": "solana",
+        "recipient": "seeker",
+        "status": "pending",
+        "timestamp": "2026-02-06T02:27:41.309Z"
+      }
+    ],
+    "messages": [
+      {
+        "id": "msg-1770344858715-px3p",
+        "from": "dispatcher",
+        "to": "seeker",
+        "content": "Routing task: \"what happened in crypto news today?...\"",
+        "timestamp": "2026-02-06T02:27:38.715Z"
+      },
+      {
+        "id": "msg-1770344858717-epu2",
+        "from": "dispatcher",
+        "to": "seeker",
+        "content": "Checking x402 payment...",
+        "timestamp": "2026-02-06T02:27:38.717Z"
+      },
+      {
+        "id": "msg-1770344859508-5x78",
+        "from": "dispatcher",
+        "to": "seeker",
+        "content": "Processing with seeker... (fee: 0.0001 USDC)",
+        "timestamp": "2026-02-06T02:27:39.508Z"
+      },
+      {
+        "id": "msg-1770344861149-7e1j",
+        "from": "seeker",
+        "to": "dispatcher",
+        "content": "<strong>Shares of Strategy, the largest corporate holder of bitcoin, fell over 17% on Thursday, as bitcoin sank to levels below what the company paid on average for its massive crypto stockpile.</strong>",
+        "timestamp": "2026-02-06T02:27:41.149Z"
+      },
+      {
+        "id": "msg-1770344861309-yfa6",
+        "from": "x402",
+        "to": "dispatcher",
+        "content": "💰 x402 Fee (Mock): 0.0001 USDC → seeker",
+        "timestamp": "2026-02-06T02:27:41.309Z"
+      }
+    ],
+    "metadata": {
+      "hiredAgents": [
+        "bankr",
+        "scribe",
+        "seeker"
+      ],
+      "wasApproved": false
+    },
+    "result": {
+      "success": true,
+      "data": {
+        "summary": "📰 **Latest News: what happened in crypto news today**\n\n1. **Crypto crash accelerates as investors flee risky assets**\n   <strong>Shares of Strategy, the largest corporate holder of bitcoin, fell over 17% on Thursday, as bitcoin sank to levels below what the company paid on average for its massive crypto stockpile.</strong>\n   _3 hours ago_\n\n2. **Bitcoin drops 15%, briefly breaking below $61,000 as sell-off intensifies, doubts about crypto grow**\n   At one point, the token slid to $60,062.00, as the crypto sell-off intensified in overnight trading. <strong>Bitcoin was last down about 15% at 7:37 p.m. ET, trading at $62,448.00</strong>. Digital assets, including bitcoin, have fallen deeper into the red as ...\n   _2 hours ago_\n\n3. **Bitcoin price under $70,000: Seriously, what’s going on? | CNN Business**\n   Bitcoin is acting weird. The world’s most famous cryptocurrency has <strong>tumbled 44% from its October peak, falling below $70,000 Thursday for the first time in 15 months</strong>.\n   _9 hours ago_\n\n4. **Bitcoin price hits lowest level since Trump took office**\n   With Thursday&#x27;s drop, <strong>Bitcoin prices are down 32% in the last 12 months and are trending toward prices seen in early 2024 and 2021</strong>. Bitcoin is the world&#x27;s largest and generally most well-known cryptocurrency, a form of digital-only money that ...\n   _4 hours ago_\n\n5. **BTC price news: Bitcoin spirals toward $60,000, headed for worst drawdown since FTX crash**\n   <strong>Bitcoin tumbled more than 10% over the past 24 hours, dropping to $63,000</strong> and heading for its steepest one-day decline since the FTX-driven crash in November 2022. The sell-off extended beyond crypto, with silver plunging 15% and gold sliding ...\n   _6 hours ago_\n\n",
+        "insight": "<strong>Shares of Strategy, the largest corporate holder of bitcoin, fell over 17% on Thursday, as bitcoin sank to levels below what the company paid on average for its massive crypto stockpile.</strong>",
+        "results": [
+          {
+            "title": "Crypto crash accelerates as investors flee risky assets",
+            "url": "https://www.nbcnews.com/business/markets/crypto-crash-bitcoin-gold-rcna257556",
+            "description": "<strong>Shares of Strategy, the largest corporate holder of bitcoin, fell over 17% on Thursday, as bitcoin sank to levels below what the company paid on average for its massive crypto stockpile.</strong>",
+            "age": "3 hours ago"
+          },
+          {
+            "title": "Bitcoin drops 15%, briefly breaking below $61,000 as sell-off intensifies, doubts about crypto grow",
+            "url": "https://www.cnbc.com/2026/02/05/bitcoin-price-today-70000-in-focus.html",
+            "description": "At one point, the token slid to $60,062.00, as the crypto sell-off intensified in overnight trading. <strong>Bitcoin was last down about 15% at 7:37 p.m. ET, trading at $62,448.00</strong>. Digital assets, including bitcoin, have fallen deeper into the red as ...",
+            "age": "2 hours ago"
+          },
+          {
+            "title": "Bitcoin price under $70,000: Seriously, what’s going on? | CNN Business",
+            "url": "https://www.cnn.com/2026/02/05/investing/bitcoin-price",
+            "description": "Bitcoin is acting weird. The world’s most famous cryptocurrency has <strong>tumbled 44% from its October peak, falling below $70,000 Thursday for the first time in 15 months</strong>.",
+            "age": "9 hours ago"
+          },
+          {
+            "title": "Bitcoin price hits lowest level since Trump took office",
+            "url": "https://www.bbc.com/news/articles/cy09x24q0pro",
+            "description": "With Thursday&#x27;s drop, <strong>Bitcoin prices are down 32% in the last 12 months and are trending toward prices seen in early 2024 and 2021</strong>. Bitcoin is the world&#x27;s largest and generally most well-known cryptocurrency, a form of digital-only money that ...",
+            "age": "4 hours ago"
+          },
+          {
+            "title": "BTC price news: Bitcoin spirals toward $60,000, headed for worst drawdown since FTX crash",
+            "url": "https://www.coindesk.com/markets/2026/02/05/bitcoin-drops-below-usd65-000-heading-to-worst-one-day-drawdown-since-ftx-blowup",
+            "description": "<strong>Bitcoin tumbled more than 10% over the past 24 hours, dropping to $63,000</strong> and heading for its steepest one-day decline since the FTX-driven crash in November 2022. The sell-off extended beyond crypto, with silver plunging 15% and gold sliding ...",
+            "age": "6 hours ago"
+          }
+        ],
+        "confidence": 0.8,
+        "details": {
+          "type": "news",
+          "query": "what happened in crypto news today",
+          "count": 5
+        }
+      },
+      "confidence": 0.8,
+      "timestamp": "2026-02-06T02:27:41.149Z",
+      "executionTimeMs": 840
+    }
   }
 }
